--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1"
   },
